read some files

--- a/rocket_home/conf/broker.conf
+++ b/rocket_home/conf/broker.conf
@@ -20,6 +20,7 @@ deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
+namesrvAddr=127.0.0.1:9876
 
 storePathRootDir=/Users/zjb/code/mine/commit/rocketmq/rocketmq/rocket_home/store
 #commitLog 存储路径
